--- a/html/Verkauf3.html
+++ b/html/Verkauf3.html
@@ -37,7 +37,7 @@
 							<div class="product-grid2">
 									<div class="product-image2">
 											<a href="">
-													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/71yATCmKhKL._AC_SX355_.jpg">
+													<img class="pic-1" src="../img/Fusso.jpg">
 													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/41vZUPuiPHL._AC_SY355_.jpg">
 											</a>
 													<a class="add-to-cart" href="">Wachs mit sehr gutem Apperleffekt und langer Standzeit.</a>
@@ -68,8 +68,8 @@
 							<div class="product-grid2">
 									<div class="product-image2">
 											<a href="">
-													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/61dVpIvL9lL._AC_SY450_.jpg">
-													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/51cdhy2Df0L._AC_SX450_.jpg">
+													<img class="pic-1" src="../img/ADBL.jpg">
+													<img class="pic-2" src="../img/ADBL.jpg">
 											</a>
 
 											<a class="add-to-cart" href="">Sprühwachs mit einem guten Apperleffekt und mittlerer Standzeit.</a>
@@ -84,8 +84,8 @@
 							<div class="product-grid2">
 									<div class="product-image2">
 											<a href="">
-													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/71NH%2BKKSp-L._AC_SY450_.jpg">
-													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/41MWqx%2Bdi5L._AC_SX425_.jpg">
+													<img class="pic-1" src="../img/Swissvax.jpg">
+													<img class="pic-2" src="../img/Swissvax.jpg">
 											</a>
 
 											<a class="add-to-cart" href="">Hochwertiges Carnaubawachs, um Felgen zu versiegeln.</a>
