--- a/html/order_process.html
+++ b/html/order_process.html
@@ -87,19 +87,22 @@
 																<label for="vi"> Überweisung</label><br />
 																<input type="radio" id="ae" name="Zahlmethode" value="Auf Rechnung">
 																<label for="ae"> Auf Rechnung</label>
+																<button type="submit" id="Button" disabled="disabled" style="width:125px;float:right; height: 50px;">Bestellvorgang<br />abschließen</button>
 														</fieldset>
 												</form>
 
 
-												<button type="submit" id="Button" disabled="disabled" style="width:125px;float:right; height: 50px;">Bestellvorgang<br />abschließen</button>
+												
 
 </form></div>
 		</div>
-				<!-- footer -->
-	<div class="footer-basic">
+						<!-- footer -->
+		<div class="container">
+		<div class="footer-basic">
 			<footer>
-				<p>Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2</p>
+				<p class="copyright">Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2</p>
 			</footer>
 		</div>
+
 	</body>
 </html>
