--- a/html/order_confirm.html
+++ b/html/order_confirm.html
@@ -28,7 +28,7 @@
 				<li><a class="navi" href="Warenkorb.html">Warenkorb</a></li>
 			</ul>
 		</nav>
-    <h3 class="section-heading">Herzlichen Dank für ihre Bestellung.</h3>
+    <p id="Danksagung">Herzlichen Dank für ihre Bestellung</p>
 
 
 
