--- a/html/order_process.html
+++ b/html/order_process.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8" />
@@ -78,21 +78,21 @@
 
 
 										<div class="test">
-												<form class="test" action="/action_page.php" method="get">
-														<p>Geben Sie Ihre Zahlungsweise an:</p>
-														<fieldset>
-																<input type="radio" id="mc" name="Zahlmethode" value="Paypal">
-																<label for="mc"> Paypal</label><br />
-																<input type="radio" id="vi" name="Zahlmethode" value="Überweisung">
-																<label for="vi"> Überweisung</label><br />
-																<input type="radio" id="ae" name="Zahlmethode" value="Auf Rechnung">
-																<label for="ae"> Auf Rechnung</label>
-																<button type="submit" id="Button" disabled="disabled" style="width:125px;float:right; height: 50px;">Bestellvorgang<br />abschließen</button>
-														</fieldset>
-												</form>
+											<form class="test" action="https://de.w3docs.com">
+												<p>Geben Sie Ihre Zahlungsweise an:</p>
+												<fieldset>
+													<input type="radio" id="mc" name="Zahlmethode" value="Paypal">
+													<label for="mc"> Paypal</label><br />
+													<input type="radio" id="vi" name="Zahlmethode" value="Überweisung">
+													<label for="vi"> Überweisung</label><br />
+													<input type="radio" id="ae" name="Zahlmethode" value="Auf Rechnung">
+													<label for="ae"> Auf Rechnung</label>
+													<button style="float:right"; type="submit" formaction="order_confirm.html">Bestellvorgang<br />abschließen</button>
+												</fieldset>
+											</form>
+											
 
 
-												
 
 </form></div>
 		</div>
