--- a/html/Verkauf1.html
+++ b/html/Verkauf1.html
@@ -42,8 +42,9 @@
 													<a class="add-to-cart" href="">Mikrofaser Waschhandschuh, mit dem man das Auto kratzerfrei reinigen kann</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">ALCLEAR Waschhandschuh</a></h3>
-											<span class="price">€12.99</span>
+											<h3 class="title"><a href="">ALCLEAR Waschhandschuh</br>€12.99</a></h3>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
+											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
 									</div>
 							</div>
 					</div>
@@ -58,8 +59,9 @@
 										<a class="add-to-cart" href="">Wascheimer mit Grit Guard Einsatz, um Kratzer bei der Wäsche zu minimieren.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">2x Eimer mit Grit Guard</a></h3>
-											<span class="price">€54.99</span>
+											<h3 class="title"><a href="">2x Eimer mit Grit Guard</br>€54.99</a></h3>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
+											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
 									</div>
 							</div>
 					</div>
@@ -74,8 +76,9 @@
 											<a class="add-to-cart" href="">Schaumsprühe für die Vorwäsche, hiermit können gröbere Verschmutzungen angelöst werden.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">Gloria FM10</a></h3>
-											<span class="price">€29.99</span>
+											<h3 class="title"><a href="">Gloria FM10</br>€29.99</a></h3>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
+											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
 									</div>
 							</div>
 					</div>
@@ -90,8 +93,9 @@
 											<a class="add-to-cart" href="">Schaumsprüher-Füllung für die Vorwäsche, kann z.B. für die Gloria FM10 genutzt werden.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">GLORIA Top Foam</a></h3>
-											<span class="price">€14.99</span>
+											<h3 class="title"><a href="">GLORIA Top Foam</br>€14.99</a></h3>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
+											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
 									</div>
 							</div>
 					</div>
@@ -105,8 +109,9 @@
 											<a class="add-to-cart" href="">Shampoo für die Autowäsche.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">SONAX AutoShampoo</a></h3>
-											<span class="price">€5.79</span>
+											<h3 class="title"><a href="">SONAX AutoShampoo</br>€5.79</a></h3>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
+											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
 									</div>
 							</div>
 					</div>
@@ -121,8 +126,9 @@
 											<a class="add-to-cart" href="">Lackknete für das Auto, um Verschmutzungen wie Teer, eingebrannte Insekten, Flugrost etc. zu entfernen.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">Petzolds Lackknete</a></h3>
-											<span class="price">€16.90</span>
+											<h3 class="title"><a href="">Petzolds Lackknete</br>€16.90</a></h3>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
+											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
 									</div>
 							</div>
 					</div>
