--- a/html/Warenkorb.html
+++ b/html/Warenkorb.html
@@ -31,10 +31,7 @@
     <div class="container wasdienedgeschafthaben">
 			<div class="row">
 <table>
-	<col style="width: 40%;">
-	<col style="width: 20%;">
-	<col style="width: 30%;">
-	<col style="width: 10%;">
+
 
     <tr>
       <th>Artikel</th>
@@ -44,37 +41,46 @@
 
     <tr>
       <td>Gloria FM10</td>
-      <td><input step="1" data-step-max="10" type="number" value="1" data-decimals="0" min="1" max="360" class="col-3"/></td>
+      <td>1</td>
       <td>29.99 €</td>
       <td><button class="button">X</button></td>
 	</div>
     </tr>
     <tr>
       <td>SONAX AutoShampoo</td>
-      <td ><input step="1" data-step-max="10" type="number" value="1" data-decimals="0" min="1" max="360" class="col-3"/></td>
+      <td >1</td>
       <td>5.79 €</td>
       <td><button class="button">X</button></td>
 
     </tr>
     <tr>
         <td>Menzerna 400</td>
-        <td><input step="1" data-step-max="10" type="number" value="1" data-decimals="0" min="1" max="360" class="col-3"/></td>
+        <td>1</td>
         <td>13.99 €</td>
         <td><button class="button">X</button></td>
     </tr>
     <tr>
         <td valigin:center>SWISSVAX SWIZÖL Autobahn</td>
-        <td><input step="1" data-step-max="10" type="number" value="1" data-decimals="0" min="1" max="360" class="col-3"/></td>
+        <td>1</td>
         <td>39.99 €</td>
         <td><button class="button">X</button></td>
-	</tr>
+  </tr>
+  <tr>
+    <td>Gesamtkosten:</td>
+    <td></td>
+    <td>89.76€</td>
+    <td></td>
+</tr>
+<tr>
+  <td valigin:center></td>
+  <td></td>
+  <td><a href="order_process.html"><button>Weiter zur </br>Bestellung</button></a></td>
+  <td></td>
+</tr>
+
 
   </table>
 
-
-<div class="summe" ><p>Gesamtkosten: 89.76 €</p></div>
-
-<!--<div ><button class="button1">Weiter zur Bestellung</button></div> -->
 
 
     </div>
