--- a/html/Verkauf3.html
+++ b/html/Verkauf3.html
@@ -43,8 +43,9 @@
 													<a class="add-to-cart" href="">Wachs mit sehr gutem Apperleffekt und langer Standzeit.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">Soft99 Fusso Coeat 12M</a></h3>
-											<span class="price">€34.99</span>
+											<h3 class="title"><a href="">Soft99 Fusso Coeat 12M</br>€34.99</a></h3>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
+											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
 									</div>
 							</div>
 					</div>
@@ -59,8 +60,9 @@
 										<a class="add-to-cart" href=""> Sprühwachs, hiermit kann man das Soft99 Fusso Coat 12M pflegen.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">Soft99 Fusso Coat Speed and Barriere Hand Spray</a></h3>
-											<span class="price">€19.99</span>
+											<h3 class="title"><a href="">Soft99 Fusso Coat Speed and Barriere Hand Spray</br>€19.99</a></h3>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
+											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
 									</div>
 							</div>
 					</div>
@@ -75,8 +77,9 @@
 											<a class="add-to-cart" href="">Sprühwachs mit einem guten Apperleffekt und mittlerer Standzeit.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">ADBL Synthetic Spray Wax</a></h3>
-											<span class="price">€23.49</span>
+											<h3 class="title"><a href="">ADBL Synthetic Spray Wax</br>€23.49</a></h3>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
+											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
 									</div>
 							</div>
 					</div>
@@ -91,8 +94,9 @@
 											<a class="add-to-cart" href="">Hochwertiges Carnaubawachs, um Felgen zu versiegeln.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">SWISSVAX SWIZÖL Autobahn</a></h3>
-											<span class="price">€39.99</span>
+											<h3 class="title"><a href="">SWISSVAX SWIZÖL Autobahn</br>€39.99</a></h3>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
+											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
 									</div>
 							</div>
 					</div>
@@ -106,8 +110,9 @@
 											<a class="add-to-cart" href="">Hochwertige Keramikversiegelung mit sehr langer Standzeit.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">Gyeon Keramikversiegelung Q2 One</a></h3>
-											<span class="price">€69.99</span>
+											<h3 class="title"><a href="">Gyeon Keramikversiegelung Q2 One</br>€69.99</a></h3>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
+											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
 									</div>
 							</div>
 					</div>
@@ -122,8 +127,9 @@
 											<a class="add-to-cart" href="">Hochwertige Nanoversiegelung mit sehr langer Standzeit.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">Koch Chemie 1K-Nano Lackversiegelung</a></h3>
-											<span class="price">€114.90</span>
+											<h3 class="title"><a href="">Koch Chemie 1K-Nano Lackversiegelung</br>€114.90</a></h3>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
+											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
 									</div>
 							</div>
 					</div>
