--- a/html/Verkauf2.html
+++ b/html/Verkauf2.html
@@ -43,8 +43,9 @@
 													<a class="add-to-cart" href="">Sehr Starke Politur, um sehr tiefe Kratzer zu korrigieren.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">Menzerna 400</a></h3>
-											<span class="price">€13.99</span>
+											<h3 class="title"><a href="">Menzerna 400</br>€13.99</a></h3>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
+											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
 									</div>
 							</div>
 					</div>
@@ -59,8 +60,9 @@
 										<a class="add-to-cart" href=""> Starke Politur, um tiefere Kratzer zu korrigieren.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">Menzerna 1000</a></h3>
-											<span class="price">€11.99</span>
+											<h3 class="title"><a href="">Menzerna 1000</br>€11.99</a></h3>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
+											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
 									</div>
 							</div>
 					</div>
@@ -75,8 +77,9 @@
 											<a class="add-to-cart" href="">Mittelstarke Politur, um mittlere und leichte Kratzer zu korrigieren.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">Menzerna 2500</a></h3>
-											<span class="price">€11.49</span>
+											<h3 class="title"><a href="">Menzerna 2500</br>€11.49</a></h3>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
+											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
 									</div>
 							</div>
 					</div>
@@ -91,8 +94,9 @@
 											<a class="add-to-cart" href="">Hochglanzpolitur, um leichte Kratzer und Hologramme zu entfernen.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">Menzerna 3500</a></h3>
-											<span class="price">€12.99</span>
+											<h3 class="title"><a href="">Menzerna 3500</br>€12.99</a></h3>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
+											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
 									</div>
 							</div>
 					</div>
@@ -106,8 +110,9 @@
 											<a class="add-to-cart" href="">Einsteiger Poliermaschine, mit einem guten Preis-Leistungs-Verhältnis.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">DINO Kraftpaket 9mm</a></h3>
-											<span class="price">€69.99</span>
+											<h3 class="title"><a href="">DINO Kraftpaket 9mm</br>€69.99</a></h3>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
+											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
 									</div>
 							</div>
 					</div>
@@ -122,8 +127,9 @@
 											<a class="add-to-cart" href="">Profi Poliermaschine, für lange und intensive Einsätze geeignet.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">Rupes BigFoot</a></h3>
-											<span class="price">€399.90</span>
+											<h3 class="title"><a href="">Rupes BigFoot</br>€399.90</a></h3>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
+											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
 									</div>
 							</div>
 					</div>
