--- a/html/Verkauf1.html
+++ b/html/Verkauf1.html
@@ -43,8 +43,8 @@
 									</div>
 									<div class="product-content">
 											<h3 class="title"><a href="">ALCLEAR Waschhandschuh</br>€12.99</a></h3>
-											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
-											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
+											<button>In den Warenkorb</button>
 									</div>
 							</div>
 					</div>
@@ -60,8 +60,8 @@
 									</div>
 									<div class="product-content">
 											<h3 class="title"><a href="">2x Eimer mit Grit Guard</br>€54.99</a></h3>
-											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
-											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
+											<button>In den Warenkorb</button>
 									</div>
 							</div>
 					</div>
@@ -77,8 +77,8 @@
 									</div>
 									<div class="product-content">
 											<h3 class="title"><a href="">Gloria FM10</br>€29.99</a></h3>
-											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
-											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
+											<button>In den Warenkorb</button>
 									</div>
 							</div>
 					</div>
@@ -94,8 +94,8 @@
 									</div>
 									<div class="product-content">
 											<h3 class="title"><a href="">GLORIA Top Foam</br>€14.99</a></h3>
-											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
-											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
+											<button>In den Warenkorb</button>
 									</div>
 							</div>
 					</div>
@@ -110,8 +110,8 @@
 									</div>
 									<div class="product-content">
 											<h3 class="title"><a href="">SONAX AutoShampoo</br>€5.79</a></h3>
-											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
-											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
+											<button>In den Warenkorb</button>
 									</div>
 							</div>
 					</div>
@@ -127,8 +127,8 @@
 									</div>
 									<div class="product-content">
 											<h3 class="title"><a href="">Petzolds Lackknete</br>€16.90</a></h3>
-											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
-											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
+											<button>In den Warenkorb</button>
 									</div>
 							</div>
 					</div>
