--- a/html/Verkauf2.html
+++ b/html/Verkauf2.html
@@ -45,7 +45,7 @@
 									<div class="product-content">
 											<h3 class="title"><a href="">Menzerna 400</br>€13.99</a></h3>
 											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
-											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
+											<button>In den Warenkorb</button>
 									</div>
 							</div>
 					</div>
@@ -62,7 +62,7 @@
 									<div class="product-content">
 											<h3 class="title"><a href="">Menzerna 1000</br>€11.99</a></h3>
 											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
-											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
+											<button>In den Warenkorb</button>
 									</div>
 							</div>
 					</div>
@@ -79,7 +79,7 @@
 									<div class="product-content">
 											<h3 class="title"><a href="">Menzerna 2500</br>€11.49</a></h3>
 											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
-											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
+											<button>In den Warenkorb</button></a>
 									</div>
 							</div>
 					</div>
@@ -96,7 +96,7 @@
 									<div class="product-content">
 											<h3 class="title"><a href="">Menzerna 3500</br>€12.99</a></h3>
 											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
-											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
+											<button>In den Warenkorb</button>
 									</div>
 							</div>
 					</div>
@@ -112,7 +112,7 @@
 									<div class="product-content">
 											<h3 class="title"><a href="">DINO Kraftpaket 9mm</br>€69.99</a></h3>
 											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
-											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
+											<button>In den Warenkorb</button>
 									</div>
 							</div>
 					</div>
@@ -128,8 +128,8 @@
 									</div>
 									<div class="product-content">
 											<h3 class="title"><a href="">Rupes BigFoot</br>€399.90</a></h3>
-											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
-											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
+											<button>In den Warenkorb</button>
 									</div>
 							</div>
 					</div>
