--- a/html/Verkauf3.html
+++ b/html/Verkauf3.html
@@ -44,8 +44,8 @@
 									</div>
 									<div class="product-content">
 											<h3 class="title"><a href="">Soft99 Fusso Coeat 12M</br>€34.99</a></h3>
-											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
-											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
+											<button>In den Warenkorb</button>
 									</div>
 							</div>
 					</div>
@@ -60,9 +60,9 @@
 										<a class="add-to-cart" href=""> Sprühwachs, hiermit kann man das Soft99 Fusso Coat 12M pflegen.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">Soft99 Fusso Coat Speed and Barriere Hand Spray</br>€19.99</a></h3>
-											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
-											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
+											<h3 class="title"><a href="">Soft99 Fusso Coat Detailer</br>€19.99</a></h3>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
+											<button>In den Warenkorb</button>
 									</div>
 							</div>
 					</div>
@@ -78,8 +78,8 @@
 									</div>
 									<div class="product-content">
 											<h3 class="title"><a href="">ADBL Synthetic Spray Wax</br>€23.49</a></h3>
-											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
-											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
+											<button>In den Warenkorb</button>
 									</div>
 							</div>
 					</div>
@@ -95,8 +95,8 @@
 									</div>
 									<div class="product-content">
 											<h3 class="title"><a href="">SWISSVAX SWIZÖL Autobahn</br>€39.99</a></h3>
-											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
-											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
+											<button>In den Warenkorb</button>
 									</div>
 							</div>
 					</div>
@@ -111,8 +111,8 @@
 									</div>
 									<div class="product-content">
 											<h3 class="title"><a href="">Gyeon Keramikversiegelung Q2 One</br>€69.99</a></h3>
-											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
-											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
+											<button>In den Warenkorb</button>
 									</div>
 							</div>
 					</div>
@@ -128,8 +128,8 @@
 									</div>
 									<div class="product-content">
 											<h3 class="title"><a href="">Koch Chemie 1K-Nano Lackversiegelung</br>€114.90</a></h3>
-											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3"/>
-											<a href="Warenkorb.html"><button>in den </br>Warenkorb</button></a>
+											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
+											<button>In den Warenkorb</button>
 									</div>
 							</div>
 					</div>
