--- a/html/Verkauf1.html
+++ b/html/Verkauf1.html
@@ -5,8 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Handwäsche</title>
-	<link rel="stylesheet" href="../css/bootstrap.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	  <link rel="stylesheet" href="../css/bootstrap.css">
 		<link rel="stylesheet" href="../css/Stylesheet.css">
+    <script src="../js/Verkauf1Client.js"></script>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -43,8 +45,8 @@
 									</div>
 									<div class="product-content">
 											<h3 class="title"><a href="">ALCLEAR Waschhandschuh</br>€12.99</a></h3>
-											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
-											<button>In den Warenkorb</button>
+											<input id="userInput" step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
+											<button id="addProduct" onclick="Input1()">In den Warenkorb</button>
 									</div>
 							</div>
 					</div>
@@ -138,6 +140,7 @@
 	<hr>
 			<!-- footer -->
 
+
 <div class="footer-basic">
 		<footer>
       <p class="copyright">Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2</p>
@@ -145,3 +148,28 @@
 	</div>
   </body>
 </html>
+
+<!-- jquery functions to send the amound of requested Product to the server and the database -->
+
+<script>
+
+$("#addprodukt").click(function() {
+        console.log("button addtax clicked");
+
+  var obj = { "bezeichnung": "Sondersteuer", "steuersatz": 24.5 };
+
+  $.ajax({
+            url: "http://localhost:8000/api/mehrwertsteuer",
+            method: "post",
+    contentType: "application/json",
+    data: JSON.stringify(obj)
+        }).done(function (response) {
+            console.log(response);
+            $("#output").html(JSON.stringify(response));
+        }).fail(function (jqXHR, statusText, error) {
+            console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
+            $("#output").html("Ein Fehler ist aufgetreten");
+        });
+    });
+
+</script>
