--- a/html/order_process.html
+++ b/html/order_process.html
@@ -34,7 +34,7 @@
 						<div class="Anrede">
 								<div class="form-group col-md-4">
 										<label for="Anrede">Anrede:</label>
-										<input id="Anrede" class="form-control full-width" type="text" name="Anrede" placeholder="Anrede" width="50%">
+										<input id="Anrede" class="form-control full-width">
 								</div>
 
 								<div class="col-md-8">
@@ -43,42 +43,42 @@
 										<div class="form-row">
 												<div class="form-group col-md-6">
 														<label for="Vorname">Vorname:</label>
-														<input id="Vorname" class="form-control full-width" type="text" name="Vorname" placeholder="Vorname">
+														<input id="Vorname" class="form-control full-width">
 												</div>
 
 												<div class="form-group col-md-6">
 														<label for="Nachname">Nachname:</label>
-														<input id="Nachname" class="form-control full-width" type="text" name="Nachname" placeholder="Nachname">
+														<input id="Nachname" class="form-control full-width">
 												</div>
 										</div>
 
 										<div class="form-row">
 												<div class="form-group col-md-6">
 														<label for="PLZ">PLZ:</label>
-														<input id="PLZ" class="form-control full-width" type="text" name="PLZ" placeholder="PLZ">
+														<input id="PLZ" class="form-control full-width">
 												</div>
 
 												<div class="form-group col-md-6">
 														<label for="Ort">Ort:</label>
-														<input id="Ort" class="form-control full-width" type="text" name="Ort" placeholder="Ort">
+														<input id="Ort" class="form-control full-width">
 												</div>
 										</div>
 
 										<div class="form-row">
 												<div class="form-group col-md-6">
 														<label for="Straße">Straße:</label>
-														<input id="Straße" class="form-control full-width" type="text" name="Straße" placeholder="Straße">
+														<input id="Straße" class="form-control full-width">
 												</div>
 
 												<div class="form-group col-md-6">
 														<label for="Hausnummer">Hausnummer:</label>
-														<input id="Hausnummer" class="form-control full-width" type="text" name="Hausnummer" placeholder="Hausnummer">
+														<input id="Hausnummer" class="form-control full-width">
 												</div>
 										</div>
 
 
 										<div class="test">
-											<form class="test" action="https://de.w3docs.com">
+											<form class="test">
 												<p>Geben Sie Ihre Zahlungsweise an:</p>
 												<fieldset>
 													<input type="radio" id="mc" name="Zahlmethode" value="Paypal">
@@ -87,10 +87,10 @@
 													<label for="vi"> Überweisung</label><br />
 													<input type="radio" id="ae" name="Zahlmethode" value="Auf Rechnung">
 													<label for="ae"> Auf Rechnung</label>
-													<button style="float:right"; type="submit" formaction="order_confirm.html">Bestellvorgang<br />abschließen</button>
+													<button style="float:right"; formaction="order_confirm.html">Bestellvorgang<br />abschließen</button>
 												</fieldset>
 											</form>
-											
+
 
 
 
