--- a/html/Verkauf1.html
+++ b/html/Verkauf1.html
@@ -154,7 +154,7 @@
 <script>
 
 $("#addprodukt").click(function() {
-        console.log("button addtax clicked");
+        console.log(window.input1);
 
   var obj = { "bezeichnung": "Sondersteuer", "steuersatz": 24.5 };
 
