--- a/html/Warenkorb.html
+++ b/html/Warenkorb.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/Verkauf1Client.js"></script>
 	</head>
   <body>
 	<div class="pointer">
@@ -41,7 +42,7 @@
 
     <tr>
       <td>Gloria FM10</td>
-      <td>1</td>
+      <td>window.input1</td>
       <td>29.99 €</td>
       <td><button class="button">X</button></td>
 	</div>
