--- a/html/Verkauf1.html
+++ b/html/Verkauf1.html
@@ -37,11 +37,11 @@
 					<div class="col-md-3 col-sm-6">
 							<div class="product-grid2">
 									<div class="product-image2">
-											<a href="">
+
 													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/716iMjDLDoL._AC_SY550_.jpg">
 													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81Xnmqr5wNL._AC_SX466_.jpg">
-											</a>
-													<a class="add-to-cart" href="">Mikrofaser Waschhandschuh, mit dem man das Auto kratzerfrei reinigen kann</a>
+
+													<p class="add-to-cart">Mikrofaser Waschhandschuh, mit dem man das Auto kratzerfrei reinigen kann</p>
 									</div>
 									<div class="product-content">
 											<h3 class="title"><a href="">ALCLEAR Waschhandschuh</br>€12.99</a></h3>
@@ -53,12 +53,12 @@
 					<div class="col-md-3 col-sm-6">
 							<div class="product-grid2">
 								<div class="product-image2">
-										<a href="">
+
 												<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/51yi-JJt6PL._AC_SY355_.jpg">
 												<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/61mrtbNymWL._AC_SY450_.jpg">
-										</a>
 
-										<a class="add-to-cart" href="">Wascheimer mit Grit Guard Einsatz, um Kratzer bei der Wäsche zu minimieren.</a>
+
+										<p class="add-to-cart">Wascheimer mit Grit Guard Einsatz, um Kratzer bei der Wäsche zu minimieren.</p>
 									</div>
 									<div class="product-content">
 											<h3 class="title"><a href="">2x Eimer mit Grit Guard</br>€54.99</a></h3>
@@ -151,6 +151,8 @@
 
 <!-- jquery functions to send the amound of requested Product to the server and the database -->
 
+
+<!--
 <script>
 
 $("#addProduct").click(function() {
