--- a/html/order_process.html
+++ b/html/order_process.html
@@ -29,7 +29,7 @@
 			</ul>
 		</nav>
 		<div class="container">
-				<form action="action_page.php">
+				<form action="order_confirm.html">
 
 						<div class="Anrede">
 								<div class="form-group col-md-4">
@@ -80,22 +80,20 @@
 										<div class="test">
 											<form class="test">
 												<p>Geben Sie Ihre Zahlungsweise an:</p>
-												<fieldset>
-													<input type="radio" id="mc" name="Zahlmethode" value="Paypal">
+													<input type="radio" id="mc" name="Zahlungsweise">
 													<label for="mc"> Paypal</label><br />
-													<input type="radio" id="vi" name="Zahlmethode" value="Überweisung">
+													<input type="radio" id="vi" name="Zahlungsweise">
 													<label for="vi"> Überweisung</label><br />
-													<input type="radio" id="ae" name="Zahlmethode" value="Auf Rechnung">
+													<input type="radio" id="ae" name="Zahlungsweise">
 													<label for="ae"> Auf Rechnung</label>
-													<button style="float:right"; formaction="order_confirm.html">Bestellvorgang<br />abschließen</button>
-												</fieldset>
+
 											</form>
+</form>
+<a href="order_confirm.html" style="float:right"><button>Bestellung </br>abschließen</button></a>
+</div>
 
-
-
-
-</form></div>
 		</div>
+
 						<!-- footer -->
 		<div class="container">
 		<div class="footer-basic">
