--- a/html/Warenkorb.html
+++ b/html/Warenkorb.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="Stylesheet.css">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Handwäsche</title>
+	<title>Warenkorb</title>
 	<link rel="stylesheet" href="../css/bootstrap.css">
 		<link rel="stylesheet" href="../css/Stylesheet.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
@@ -43,33 +43,40 @@
     <tr>
       <td>Gloria FM10</td>
       <td>3</td>
-      <td>29.99 €</td>
+      <td>29,99 €</td>
       <td><button class="button">X</button></td>
 	</div>
     </tr>
     <tr>
       <td>SONAX AutoShampoo</td>
       <td >1</td>
-      <td>5.79 €</td>
+      <td>5,79 €</td>
       <td><button class="button">X</button></td>
 
     </tr>
     <tr>
         <td>Menzerna 400</td>
         <td>1</td>
-        <td>13.99 €</td>
+        <td>13,99 €</td>
         <td><button class="button">X</button></td>
     </tr>
     <tr>
         <td valigin:center>SWISSVAX SWIZÖL Autobahn</td>
         <td>1</td>
-        <td>39.99 €</td>
+        <td>39,99 €</td>
         <td><button class="button">X</button></td>
   </tr>
+  <tr></tr>
+  <tr>
+	<td></td>
+	<td>inkl. 19% MwSt.</td>
+	<td>17,05 €</td>
+  </tr>
+ 
   <tr>
     <td>Gesamtkosten:</td>
     <td></td>
-    <td>89.76€</td>
+    <td>89,76 €</td>
     <td></td>
 </tr>
 <tr>
