--- a/html/start.html
+++ b/html/start.html
@@ -54,8 +54,8 @@
 			Autopflege hat sich seit ein paar Jahren stark in Europa und speziell Deutschland etabliert
 			und ist keine Nische mehr. So waschen Autoliebhaber von jedem Alter gerne und auf hohem
 			Entusiasten-Niveau ihre Fahrzeuge und das mit einer Hingabe die seinesgleichen sucht. Das perfekte
-			Reinigen von einem Fahrzeug, egal ob Auto, Motorrad, Fahrrad oder etwas anderes, ist für mich eine
-			absolute Passion und hat sehr viel mit Lifestyle zu tun. So gibt es für mich nichts schöneres als an
+			Reinigen von einem Fahrzeug, egal ob Auto, Motorrad, Fahrrad oder etwas anderes, ist für uns eine
+			absolute Passion und hat sehr viel mit Lifestyle zu tun. So gibt es für uns nichts Schöneres, als an
 			einem schönen Sommerabend in der Waschbox mit ein paar Freunden unsere Autos zu waschen und die Zeit
 			draußen in der Natur zu genießen. Danach kann natürlich noch auf ein schönes Autotreffen gefahren
 			werden, wo wir unsere Leidenschaft mit anderen Autoverrückten teilen.
