--- a/html/Verkauf1.html
+++ b/html/Verkauf1.html
@@ -44,7 +44,7 @@
 													<p class="add-to-cart">Mikrofaser Waschhandschuh, mit dem man das Auto kratzerfrei reinigen kann</p>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">ALCLEAR Waschhandschuh</br>€12.99</a></h3>
+											<h3 class="title">ALCLEAR Waschhandschuh</br>12,99 €</br>inkl. MwSt.</h3>
 											<input id="userInput" step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
 											<button id="addProduct" onclick="Input1()">In den Warenkorb</button>
 									</div>
@@ -61,7 +61,7 @@
 										<p class="add-to-cart">Wascheimer mit Grit Guard Einsatz, um Kratzer bei der Wäsche zu minimieren.</p>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">2x Eimer mit Grit Guard</br>€54.99</a></h3>
+											<h3 class="title">2x Eimer mit Grit Guard</br>54,99 €</br>inkl. MwSt.</h3>
 											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
 											<button>In den Warenkorb</button>
 									</div>
@@ -78,7 +78,7 @@
 											<a class="add-to-cart" href="">Schaumsprühe für die Vorwäsche, hiermit können gröbere Verschmutzungen angelöst werden.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">Gloria FM10</br>€29.99</a></h3>
+											<h3 class="title">Gloria FM10</br>29,99 €</br>inkl. MwSt.</h3>
 											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
 											<button>In den Warenkorb</button>
 									</div>
@@ -95,7 +95,7 @@
 											<a class="add-to-cart" href="">Schaumsprüher-Füllung für die Vorwäsche, kann z.B. für die Gloria FM10 genutzt werden.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">GLORIA Top Foam</br>€14.99</a></h3>
+											<h3 class="title">GLORIA Top Foam</br>14,99 €</br>inkl. MwSt.</h3>
 											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
 											<button>In den Warenkorb</button>
 									</div>
@@ -111,7 +111,7 @@
 											<a class="add-to-cart" href="">Shampoo für die Autowäsche.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">SONAX AutoShampoo</br>€5.79</a></h3>
+											<h3 class="title">SONAX AutoShampoo</br>5,79 €</br>inkl. MwSt.</h3>
 											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
 											<button>In den Warenkorb</button>
 									</div>
@@ -128,7 +128,7 @@
 											<a class="add-to-cart" href="">Lackknete für das Auto, um Verschmutzungen wie Teer, eingebrannte Insekten, Flugrost etc. zu entfernen.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">Petzolds Lackknete</br>€16.90</a></h3>
+											<h3 class="title">Petzolds Lackknete</br>16,90 €</br>inkl. MwSt.</h3>
 											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
 											<button>In den Warenkorb</button>
 									</div>
