--- a/html/Verkauf2.html
+++ b/html/Verkauf2.html
@@ -43,7 +43,7 @@
 													<a class="add-to-cart" href="">Sehr Starke Politur, um sehr tiefe Kratzer zu korrigieren.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">Menzerna 400</br>€13.99</a></h3>
+											<h3 class="title">Menzerna 400</br>13,99 €</br>inkl. MwSt.</h3>
 											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
 											<button>In den Warenkorb</button>
 									</div>
@@ -60,7 +60,7 @@
 										<a class="add-to-cart" href=""> Starke Politur, um tiefere Kratzer zu korrigieren.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">Menzerna 1000</br>€11.99</a></h3>
+											<h3 class="title">Menzerna 1000</br>11,99 €</br>inkl. MwSt.</h3>
 											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
 											<button>In den Warenkorb</button>
 									</div>
@@ -77,7 +77,7 @@
 											<a class="add-to-cart" href="">Mittelstarke Politur, um mittlere und leichte Kratzer zu korrigieren.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">Menzerna 2500</br>€11.49</a></h3>
+											<h3 class="title">Menzerna 2500</br>11,49 €</br>inkl. MwSt.</h3>
 											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
 											<button>In den Warenkorb</button></a>
 									</div>
@@ -94,7 +94,7 @@
 											<a class="add-to-cart" href="">Hochglanzpolitur, um leichte Kratzer und Hologramme zu entfernen.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">Menzerna 3500</br>€12.99</a></h3>
+											<h3 class="title">Menzerna 3500</br>12,99 €</br>inkl. MwSt.</h3>
 											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
 											<button>In den Warenkorb</button>
 									</div>
@@ -110,7 +110,7 @@
 											<a class="add-to-cart" href="">Einsteiger Poliermaschine, mit einem guten Preis-Leistungs-Verhältnis.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">DINO Kraftpaket 9mm</br>€69.99</a></h3>
+											<h3 class="title">DINO Kraftpaket 9mm</br>69,99 €</br>inkl. MwSt.</h3>
 											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
 											<button>In den Warenkorb</button>
 									</div>
@@ -127,7 +127,7 @@
 											<a class="add-to-cart" href="">Profi Poliermaschine, für lange und intensive Einsätze geeignet.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">Rupes BigFoot</br>€399.90</a></h3>
+											<h3 class="title">Rupes BigFoot</br>399,90 €</br>inkl. MwSt.</h3>
 											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
 											<button>In den Warenkorb</button>
 									</div>
