--- a/html/Verkauf3.html
+++ b/html/Verkauf3.html
@@ -43,7 +43,7 @@
 													<a class="add-to-cart" href="">Wachs mit sehr gutem Apperleffekt und langer Standzeit.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">Soft99 Fusso Coeat 12M</br>€34.99</a></h3>
+											<h3 class="title">Soft99 Fusso Coat 12M</br>34,99 €</br>inkl. MwSt.</h3>
 											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
 											<button>In den Warenkorb</button>
 									</div>
@@ -60,7 +60,7 @@
 										<a class="add-to-cart" href=""> Sprühwachs, hiermit kann man das Soft99 Fusso Coat 12M pflegen.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">Soft99 Fusso Coat Detailer</br>€19.99</a></h3>
+											<h3 class="title">Soft99 Fusso Coat Detailer</br>19,99 €</br>inkl. MwSt.</h3>
 											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
 											<button>In den Warenkorb</button>
 									</div>
@@ -77,7 +77,7 @@
 											<a class="add-to-cart" href="">Sprühwachs mit einem guten Apperleffekt und mittlerer Standzeit.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">ADBL Synthetic Spray Wax</br>€23.49</a></h3>
+											<h3 class="title">ADBL Synthetic Spray Wax</br>23,49 €</br>inkl. MwSt.</h3>
 											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
 											<button>In den Warenkorb</button>
 									</div>
@@ -94,7 +94,7 @@
 											<a class="add-to-cart" href="">Hochwertiges Carnaubawachs, um Felgen zu versiegeln.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">SWISSVAX SWIZÖL Autobahn</br>€39.99</a></h3>
+											<h3 class="title">SWISSVAX SWIZÖL Autobahn</br>39,99 €</br>inkl. MwSt.</h3>
 											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
 											<button>In den Warenkorb</button>
 									</div>
@@ -110,7 +110,7 @@
 											<a class="add-to-cart" href="">Hochwertige Keramikversiegelung mit sehr langer Standzeit.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">Gyeon Keramikversiegelung Q2 One</br>€69.99</a></h3>
+											<h3 class="title">Gyeon Keramikversiegelung Q2 One</br>69,99 €</br>inkl. MwSt.</h3>
 											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
 											<button>In den Warenkorb</button>
 									</div>
@@ -127,7 +127,7 @@
 											<a class="add-to-cart" href="">Hochwertige Nanoversiegelung mit sehr langer Standzeit.</a>
 									</div>
 									<div class="product-content">
-											<h3 class="title"><a href="">Koch Chemie 1K-Nano Lackversiegelung</br>€114.90</a></h3>
+											<h3 class="title">Koch Chemie 1K-Nano Lackversiegelung</br>114,90 €</br>inkl. MwSt.</h3>
 											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
 											<button>In den Warenkorb</button>
 									</div>
