--- a/html/Impressum.html
+++ b/html/Impressum.html
@@ -29,11 +29,47 @@
 			</ul>
 		</nav>
 
+<p>
+<h1>Impressum</h1>
+
+Informationspflicht laut § 5 TMG.<br>
+
+Deluxe Car Care <br>
+Musterstrasse 1, Stiege 1 Tür 1,<br>
+12345 Musterhausen,<br>
+Deutschland <br>
+
+
+<strong>UID-Nummer:</strong> DE12345678 <br>
+<strong>Wirtschafts-ID:</strong> DE123456789 <br>
+<strong>Register:</strong> Handelsregister <br>
+<strong>Registernummer:</strong> HRB 123456 <br>
+<strong>Registergericht:</strong> Musterhausen <br>
+
+<strong>Tel.:</strong> 01234/56789 <br>
+<strong>Fax:</strong> 01234/56789-0 <br>
+<strong>E-Mail:</strong> office@DeluxeCarCare.de <br>
+
+<strong>Aufsichtsbehörde</strong> <br>
+Bezirkshauptmannschaft Musterhausen <br>
+<strong>Webseite der Aufsichtsbehörde</strong> <br>
+https://www.aufsichtsbeoerde-musterhausen.de/ <br>
+<strong>Anschrift der Aufsichtsbehörde</strong> <br>
+Musterweg 1, 12345 Musterhausen <br>
+
+<strong>Berufsbezeichnung</strong> <br>
+Praktikumsgruppe, Webanwendungen <br>
+
+<strong>Geschäftsführer</strong> <br>
+Leon Mehl, Caspar Trost, Fabian König, Marcus Bronner
+
+</p>
+
 
 
 
 				<!-- footer -->
-	<div class="footer">
+	<div class="footer-basic">
 			<footer>
 				<p>Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2 <br> <a href="Impressum.html">Impressum</a> | <a href="Kontakt.html">Kontakt</a> </p>
 			</footer>
