--- a/html/order_confirm.html
+++ b/html/order_confirm.html
@@ -35,7 +35,7 @@
 				<!-- footer -->
 	<div class="footer">
 			<footer>
-				<p>Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2</p>
+				<p>Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2 <br> <a href="Impressum.html">Impressum</a> | <a href="Kontakt.html">Kontakt</a> </p>
 			</footer>
 		</div>
 	</body>
