--- a/html/order_process.html
+++ b/html/order_process.html
@@ -98,9 +98,10 @@
 		<div class="container">
 		<div class="footer-basic">
 			<footer>
-				<p class="copyright">Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2</p>
+				<p>Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2 <br> <a href="Impressum.html">Impressum</a> | <a href="Kontakt.html">Kontakt</a> </p>
 			</footer>
 		</div>
+	</div>
 
 	</body>
 </html>
