--- a/html/Verkauf1.html
+++ b/html/Verkauf1.html
@@ -143,7 +143,7 @@
 
 <div class="footer-basic">
 		<footer>
-      <p class="copyright">Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2</p>
+      <p>Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2 <br> <a href="Impressum.html">Impressum</a> | <a href="Kontakt.html">Kontakt</a> </p>
 		</footer>
 	</div>
   </body>
