--- a/html/Warenkorb.html
+++ b/html/Warenkorb.html
@@ -72,7 +72,7 @@
 	<td>inkl. 19% MwSt.</td>
 	<td>17,05 €</td>
   </tr>
- 
+
   <tr>
     <td>Gesamtkosten:</td>
     <td></td>
@@ -98,7 +98,7 @@
 
 <div class="footer-basic">
     <footer>
-        <p class="copyright">Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2</p>
+        <p>Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2 <br> <a href="Impressum.html">Impressum</a> | <a href="Kontakt.html">Kontakt</a> </p>
     </footer>
 </div>
 </html>
