--- a/html/start.html
+++ b/html/start.html
@@ -93,7 +93,7 @@
 				<!-- footer -->
 	<div class="footer-basic">
 			<footer>
-				<p class="copyright">Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2</p>
+				<p>Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2 <br> <a href="Impressum.html">Impressum</a> | <a href="Kontakt.html">Kontakt</a> </p>
 			</footer>
 		</div>
 	</body>
